--- a/Resources/Prototypes/Voice/speech_emotes.yml
+++ b/Resources/Prototypes/Voice/speech_emotes.yml
@@ -246,7 +246,7 @@
   id: Blink
   name: chat-emote-name-blink
   category: Hands
-  icon: Interface/Emotes/scream.png
+  icon: Interface/Emotes/blink.png
   whitelist:
     components:
     - Eye
