--- a/Resources/Prototypes/Entities/Markers/Spawners/Random/toy.yml
+++ b/Resources/Prototypes/Entities/Markers/Spawners/Random/toy.yml
@@ -18,6 +18,7 @@
         - PlushieAtmosian
         - PlushieNuke
         - PlushieLizard
+        - PlushieMoffRandom
         - PlushieNar
         - PlushieCarp
         - PlushieSlime
