--- a/Resources/Prototypes/Entities/Structures/Furniture/dresser.yml
+++ b/Resources/Prototypes/Entities/Structures/Furniture/dresser.yml
@@ -281,6 +281,67 @@
       - id: PlushieLizard
         prob: 0.03
         orGroup: dresserthirdloot
+      # Many moff, but prob less
+      - id: PlushieMoff
+        prob: 0.02
+        orGroup: dresserthirdloot
+      - id: PlushieMoffMonarch
+        prob: 0.02
+        orGroup: dresserthirdloot
+      - id: PlushieMoffLuna
+        prob: 0.02
+        orGroup: dresserthirdloot
+      - id: PlushieMoffAtlas
+        prob: 0.02
+        orGroup: dresserthirdloot
+      - id: PlushieMoffRedish
+        prob: 0.02
+        orGroup: dresserthirdloot
+      - id: PlushieMoffRoyal
+        prob: 0.02
+        orGroup: dresserthirdloot
+      - id: PlushieMoffGothic
+        prob: 0.02
+        orGroup: dresserthirdloot
+      - id: PlushieMoffLovers
+        prob: 0.02
+        orGroup: dresserthirdloot
+      - id: PlushieMoffWhitefly
+        prob: 0.02
+        orGroup: dresserthirdloot
+      - id: PlushieMoffFirewatch
+        prob: 0.02
+        orGroup: dresserthirdloot
+      - id: PlushieMoffDeadhead
+        prob: 0.02
+        orGroup: dresserthirdloot
+      - id: PlushieMoffPoison
+        prob: 0.02
+        orGroup: dresserthirdloot
+      - id: PlushieMoffRagged
+        prob: 0.02
+        orGroup: dresserthirdloot
+      - id: PlushieMoffSnow
+        prob: 0.02
+        orGroup: dresserthirdloot
+      - id: PlushieMoffClockwork
+        prob: 0.02
+        orGroup: dresserthirdloot
+      - id: PlushieMoffMoonfly
+        prob: 0.02
+        orGroup: dresserthirdloot
+      - id: PlushieMoffWitchwing
+        prob: 0.02
+        orGroup: dresserthirdloot
+      - id: PlushieMoffPlasmafire
+        prob: 0.02
+        orGroup: dresserthirdloot
+      - id: PlushieMoffBrown
+        prob: 0.02
+        orGroup: dresserthirdloot
+      - id: PlushieMoffRosy
+        prob: 0.02
+        orGroup: dresserthirdloot
       - id: ClothingOuterSuitShrineMaiden
         prob: 0.03
         orGroup: dressersecondloot
