--- a/Resources/Textures/Interface/Emotes/attributions.yml
+++ b/Resources/Textures/Interface/Emotes/attributions.yml
@@ -8,7 +8,7 @@
 
 - files: ["blink.png"]
   license: "CC-BY-SA-3.0"
-  copyright: "Created by sspetish(discord 1143460554963427380), based on sprite by Sarahon"
+  copyright: "Created by .kreks.(discord 1042144875602268200), based on sprite by Sarahon"
   source: "https://github.com/space-wizards/space-station-14"
 
 - files: ["buzz.png"]
