--- a/Resources/migration.yml
+++ b/Resources/migration.yml
@@ -424,3 +424,6 @@ CentcomIDCardSyndie: null
 # 2024-09-06
 AntimovCircuitBoard: null
 OverlordCircuitBoard: null
+
+# 2024-09-07
+PlushieMoth: PlushieMoffRandom
