--- a/Resources/Prototypes/Entities/Mobs/Player/silicon.yml
+++ b/Resources/Prototypes/Entities/Mobs/Player/silicon.yml
@@ -33,7 +33,7 @@
   - type: ActionGrant
     actions:
     - ActionJumpToCore
-    - ActionShowJobIcons
+    - ActionShowStatusIcons
     - ActionSurvCameraLights
     - ActionAIViewLaws
   - type: UserInterface
