--- a/Resources/Prototypes/Actions/station_ai.yml
+++ b/Resources/Prototypes/Actions/station_ai.yml
@@ -12,9 +12,9 @@
     event: !type:JumpToCoreEvent
 
 - type: entity
-  id: ActionShowJobIcons
-  name: Show job icons
-  description: Shows job icons for crew members.
+  id: ActionShowStatusIcons
+  name: Show status icons
+  description: Shows status icons for crew members.
   components:
   - type: InstantAction
     itemIconStyle: BigAction
@@ -24,6 +24,16 @@
     event: !type:ActionComponentChangeEvent
       components:
       - type: ShowJobIcons
+      - type: ShowMindShieldIcons
+      - type: ShowCriminalRecordIcons
+      - type: ShowHealthBars
+        damageContainers:
+        - Biological
+        - Inorganic
+        - Silicon
+      - type: ShowHealthIcons
+        damageContainers:
+        - Biological
 
 - type: entity
   id: ActionSurvCameraLights
