--- a/Resources/Prototypes/Entities/Structures/Storage/Closets/base_structureclosets.yml
+++ b/Resources/Prototypes/Entities/Structures/Storage/Closets/base_structureclosets.yml
@@ -135,7 +135,8 @@
       map: ["enum.WeldableLayers.BaseWelded"]
   - type: EntityStorage
     isCollidableWhenOpen: true
-    enteringOffset: 0, -0.75
+    enteringOffset: 0, -0.6
+    enteringRange: 0.03
     closeSound:
       path: /Audio/Items/deconstruct.ogg
     openSound:
