--- a/Resources/Prototypes/Entities/Mobs/Player/humanoid.yml
+++ b/Resources/Prototypes/Entities/Mobs/Player/humanoid.yml
@@ -36,7 +36,7 @@
   id: DeathSquad
   parent: EventHumanoidMindShielded
   randomizeName: false
-  components:
+  components:        
     - type: GhostRole
       name: ghost-role-information-Death-Squad-name
       description: ghost-role-information-Death-Squad-description
@@ -784,11 +784,11 @@
     - type: Loadout
       prototypes: [ DisasterVictimCaptain, DisasterVictimCaptainAlt ]
 
-# Syndicate Deserter
+# Syndie Disaster Victim
 
 - type: entity
-  name: syndie deserter spawner
-  id: SyndieDeserterSpawner
+  name: syndie disaster victim spawner
+  id: SyndieDisasterVictimSpawner
   parent: MarkerBase
   components:
   - type: Sprite
@@ -798,20 +798,20 @@
         state: banner_syndicate
   - type: RandomSpawner
     prototypes:
-    - RandomHumanoidSyndieDeserter
+    - RandomHumanoidSyndieDisasterVictim
 
 - type: entity
-  id: RandomHumanoidSyndieDeserter
-  name: syndie deserter ghost role
+  id: RandomHumanoidSyndieDisasterVictim
+  name: syndie disaster victim ghost role
   components:
     - type: Sprite
       sprite: Structures/Decoration/banner.rsi
       state: banner_syndicate
     - type: RandomHumanoidSpawner
-      settings: SyndieDeserter
+      settings: SyndieDisasterVictim
 
 - type: randomHumanoidSettings
-  id: SyndieDeserter
+  id: SyndieDisasterVictim
   parent: EventHumanoid
   components:
     - type: NpcFactionMember
@@ -824,4 +824,4 @@
       raffle:
         settings: short
     - type: Loadout
-      prototypes: [ SyndicateFootsoldierGear ]
+      prototypes: [ SyndicateOperativeGearCivilian ]
