--- a/Resources/Prototypes/Entities/Structures/Machines/nuke.yml
+++ b/Resources/Prototypes/Entities/Structures/Machines/nuke.yml
@@ -1,6 +1,7 @@
 - type: entity
   abstract: true
   parent: [BaseStructure, StructureWheeled, BaseMajorContraband]
+  id: BaseNuclearBomb
   name: nuclear fission explosive
   components:
   - type: Transform
