--- a/Resources/Prototypes/Recipes/Construction/structures.yml
+++ b/Resources/Prototypes/Recipes/Construction/structures.yml
@@ -1713,19 +1713,37 @@
   conditions:
     - !type:TileNotBlocked
 
+# False walls
 - type: construction
-  name: solid secret door
-  id: SolidSecretDoor
-  graph: SecretDoor
+  name: displaced girder
+  id: DisplacedGirder
+  graph: Girder
   startNode: start
-  targetNode: solidSecretDoor
+  targetNode: displacedGirder
   category: construction-category-structures
-  description: A secret door for the wall.
+  description: Girder with poorly tightened bolts, for creating false walls.
   objectType: Structure
   placementMode: SnapgridCenter
   canBuildInImpassable: false
   icon:
-    sprite: Structures/Doors/secret_door.rsi
+    sprite: Structures/Doors/false_walls/displaced_girder.rsi
+    state: displaced
+  conditions:
+    - !type:TileNotBlocked
+
+- type: construction
+  name: solid false wall
+  id: SolidFalseWall
+  graph: Girder
+  startNode: start
+  targetNode: solidFalseWall
+  category: construction-category-structures
+  description: False wall for your secrets.
+  objectType: Structure
+  placementMode: SnapgridCenter
+  canBuildInImpassable: false
+  icon:
+    sprite: Structures/Doors/false_walls/solid_fwall.rsi
     state: closed
   conditions:
     - !type:TileNotBlocked
