--- a/Resources/Prototypes/Loadouts/loadout_groups.yml
+++ b/Resources/Prototypes/Loadouts/loadout_groups.yml
@@ -9,6 +9,7 @@
   - PlushieSpaceLizard
   - PlushieMoff
   - PlushieMoffBar
+  - PlushieMoffsician
   - PlushieMoffRainbow
   - Lighter
   - CigPackGreen
